# CompileTimeCalculation

./: CompileTimeCalculation.cabal  README.md
src/: Main.hs  Prime.hs
